# AlzWrite

./: CMakeLists.txt  README.md
src/: main.cpp
src/files/: File.cpp  File.hpp
src/widgets/: TextBuffer.cpp  TextBuffer.hpp
